# OTUS_6

./: CMakeLists.txt  README.md
.github/workflows/: release_ubuntu.yml
msvc/: OTUS_6.sln  homework_6.vcxproj  homework_6.vcxproj.filters
src/: main.cpp  matrix.h
